--- a/applications/advection/2d/swirl/Makefile.am
+++ b/applications/advection/2d/swirl/Makefile.am
@@ -5,10 +5,9 @@
 
 bin_PROGRAMS += applications/advection/2d/swirl/swirl
 
-include_HEADERS += applications/advection/2d/swirl/swirl_user.h
-
 applications_advection_2d_swirl_swirl_SOURCES = \
 	applications/advection/2d/swirl/swirl_user.cpp \
+	applications/advection/2d/swirl/swirl_user.h \
 	applications/advection/2d/swirl/swirl.cpp \
 	applications/advection/2d/swirl/fclaw2d_map_nomap.c \
 	applications/advection/2d/swirl/psi.f \
