--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -30,14 +30,14 @@
      nout = 800            # Used for all three out styles;  has different meaning, though.
      nstep = 200            # Only used if outstyle is 3
 
-     subcycle =  T        # subcycle in time ( = T or F).
+     subcycle =  F        # subcycle in time ( = T or F).
 
 # Equation and boundary conditions
      meqn = 1             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 # Diagnostics and debugging
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      check_conservation = T
      run_diagnostics = F
      trapfpe = T          # trap floating point exceptions
