Changes to parallel plotting tools

--- a/scripts/create_run.ini
+++ b/scripts/create_run.ini
@@ -9,13 +9,15 @@ dt_fixed = 0.04              # For 64x64 grid
 
 [Run]
 njobs = 2     # proc_count = [1,4,16,64,256,1024,4096,8192]
+proc = 1      # Start with this proc count
+
 
 mode = adapt    # uniform, adapt
 scaling = strong    # weak or strong
+scale-uniform = F
 subcycle = F
 
 mx = 8
 tfinal = 4.0
-proc = 1
-minlevel = 3
+minlevel = 5
 maxlevel = 5
