(ini,py) Update parallel tools; ini files

--- a/applications/advection/2d/filament/example0.ini
+++ b/applications/advection/2d/filament/example0.ini
@@ -2,31 +2,31 @@
      example = 0
 
 [Options]
-     mx = 32
-     my = 32
+     mx = 8
+     my = 8
      mbc = 2            # number of ghost cells
 
 # Regridding optionsx
-     minlevel = 0         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = F
-     # smooth-level = 6
-     coarsen-delay = 1
-     refine_threshold = 0.25
-     coarsen_threshold = 0.05
+     smooth-refine = T
+     smooth-level = 0
+     coarsen-delay = 0
+     refine_threshold = 0.05
+     coarsen_threshold = 0.001
 
 # Time stepping
-     tfinal = 8.0         #
+     tfinal = 4.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 0.008   # Initial time step for 'minlevel'
+     initial_dt = 4e-3   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # Controls how often output files are produced
-     nout = 2000
-     nstep = 200            # Only used if outstyle is 3
+     nout = 1000
+     nstep = 100            # Only used if outstyle is 3
 
      subcycle = F       # subcycle in time ( = T or F).
 
