--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -9,26 +9,27 @@
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
-     minlevel = 6         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 8         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.1
      coarsen_threshold = 1e-3
-     smooth-refine = F
+     smooth-refine = T
+     smooth-level = 7
      coarsen-delay = 0
 
 # Time stepping
      tfinal = 4.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 5e-3    # Initial time step for 'minlevel'
+     initial_dt = 0.04    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 800            # Used for all three out styles;  has different meaning, though.
-     nstep = 200            # Only used if outstyle is 3
+     nout = 100            # Used for all three out styles;  has different meaning, though.
+     nstep = 25            # Only used if outstyle is 3
 
      subcycle =  F        # subcycle in time ( = T or F).
 
