(ini/matlab) Changes to examples

--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -13,8 +13,8 @@
      maxlevel = 8         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.1
-     coarsen_threshold = 1e-3
+     refine_threshold = 0.25
+     coarsen_threshold = 0.01
      smooth-refine = T
      smooth-level = 7
      coarsen-delay = 0
