--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -3,23 +3,24 @@
 
 [Options]
 # Grid dimensions
-     mx = 16
-     my = 16		# grid dimensions
+     mx = 8
+     my = 8		# grid dimensions
      mbc = 2            # number of ghost cells
 
 
 # Regridding options
-     minlevel = 1         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 7         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = F
-     coarsen-delay = 1
-     refine_threshold = 0.1
+     smooth-refine = T
+     smooth-level = 7
+     coarsen-delay = 0
+
+     refine_threshold = 0.05
      coarsen_threshold = 1e-3
-     smooth-level = 5
 
 # Time stepping
-     tfinal = 8.0         #
+     tfinal = 4.0         #
 
      use_fixed_dt = T     # Take a fixed time step
      initial_dt = 4e-3   # Initial time step for 'minlevel'
@@ -27,10 +28,10 @@
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # Controls how often output files are produced
-     nout =  2000
-     nstep = 250            # Only used if outstyle is 3
+     nout =  250
+     nstep = 50           # Only used if outstyle is 3
 
-     subcycle = T       # subcycle in time ( = T or F).
+     subcycle = F       # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
