(filament) Minor modifications to filament example)

--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -13,7 +13,7 @@
      maxlevel = 7         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
-     smooth-level = 6
+     smooth-level = 5
      coarsen-delay = 0
 
      refine_threshold = 0.05
@@ -45,7 +45,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = essential    # verbosity
+     verbosity = production    # verbosity
      serialout = T            # Works with Matlab
      tikzout = T
      tikz_figsize = 4 4
