--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -9,8 +9,8 @@
 
 
 # Regridding options
-     minlevel = 3         # Minimum level
-     maxlevel = 7         # Maximum levels of refinement
+     minlevel = 1         # Minimum level
+     maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
      smooth-level = 5
@@ -23,7 +23,7 @@
      tfinal = 4.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 4e-3   # Initial time step for 'minlevel'
+     initial_dt = 1.6e-2   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
@@ -32,6 +32,8 @@
      nstep = 50           # Only used if outstyle is 3
 
      subcycle = F       # subcycle in time ( = T or F).
+     global_time_stepping = F
+
 
 # Equation info
      meqn = 1             # meqn
