(filament/ini file) added new global expand option "

--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -28,11 +28,12 @@
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # Controls how often output files are produced
-     nout =  250
-     nstep = 50           # Only used if outstyle is 3
+     nout =  50
+     nstep = 1           # Only used if outstyle is 3
 
      subcycle = F       # subcycle in time ( = T or F).
      global_time_stepping = F
+     outstyle-uses-maxlevel = T
 
 
 # Equation info
@@ -48,10 +49,10 @@
 
 # File and console IO
      verbosity = production    # verbosity
-     serialout = T            # Works with Matlab
-     tikzout = T
+     serialout = F            # Works with Matlab
+     tikzout = F
      tikz_figsize = 4 4
-     vtkout = 0               # Read into VisIt
+     vtkout = 2               # Read into VisIt
 
 # mapping functions
      manifold = F         # Manifold
