--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -22,18 +22,18 @@
 # Time stepping
      tfinal = 4.0         #
 
-     use_fixed_dt = F     # Take a fixed time step
+     use_fixed_dt = T     # Take a fixed time step
      initial_dt = 1.6e-2   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1          # Controls how often output files are produced
+     outstyle = 3          # Controls how often output files are produced
      nout =  40
-     nstep = 50             # Only used if outstyle is 3
+     nstep = 1                  # Only used if outstyle is 3
 
-     subcycle = F          # subcycle in time ( = T or F).
+     subcycle = F                # subcycle in time ( = T or F).
      global-time-stepping = T
-     outstyle-uses-maxlevel = F  # Only applies to outstyle 3
+     outstyle-uses-maxlevel = T  # Only applies to outstyle 3
 
 
 # Equation info
