(filament; ini file)

--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -22,7 +22,7 @@
 # Time stepping
      tfinal = 4.0         #
 
-     use_fixed_dt = F     # Take a fixed time step
+     use_fixed_dt = T     # Take a fixed time step
      initial_dt = 1.6e-2   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
@@ -32,7 +32,7 @@
      nstep = 1           # Only used if outstyle is 3
 
      subcycle = F       # subcycle in time ( = T or F).
-     global_time_stepping = F
+     global_time_stepping = T
      outstyle-uses-maxlevel = T
 
 
