--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -10,37 +10,39 @@
 
 # Regridding options
      minlevel = 3         # Minimum level
-     maxlevel = 8         # Maximum levels of refinement
+     maxlevel = 4         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
-     coarsen_threshold = 0.01
+     coarsen_threshold = 0.001
      smooth-refine = T
-     smooth-level = 7
+     smooth-level = 5
      coarsen-delay = 0
 
 # Time stepping
      tfinal = 4.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 0.04    # Initial time step for 'minlevel'
+     initial_dt = 0.4e-1    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 100            # Used for all three out styles;  has different meaning, though.
-     nstep = 25            # Only used if outstyle is 3
+     nout = 10            # Used for all three out styles;  has different meaning, though.
+     nstep = 1            # Only used if outstyle is 3
 
      subcycle =  F        # subcycle in time ( = T or F).
+     global_time_stepping = T
+     outstyle-uses-maxlevel = T
 
 # Equation and boundary conditions
      meqn = 1             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 # Diagnostics and debugging
-     verbosity = essential        # verbose
-     check_conservation = T
-     run_diagnostics = F
+     verbosity = production        # verbose
+     conservation-check = T
+     run-user-diagnostics = F
      trapfpe = T          # trap floating point exceptions
      mpi_debug = F
 
