--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -10,13 +10,13 @@
 
 # Regridding options
      minlevel = 3         # Minimum level
-     maxlevel = 8         # Maximum levels of refinement
+     maxlevel = 4         # Maximum levels of refinement
 
-     regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
+     regrid_interval = 0        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.01
-     smooth-refine = T
-     smooth-level = 7
+     smooth-refine = F
+     smooth-level = 3
      coarsen-delay = 0
 
 # Time stepping
@@ -28,23 +28,25 @@
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 100            # Used for all three out styles;  has different meaning, though.
-     nstep = 25            # Only used if outstyle is 3
+     nout = 50            # Used for all three out styles;  has different meaning, though.
+     nstep = 1            # Only used if outstyle is 3
 
      subcycle =  F        # subcycle in time ( = T or F).
+     global_time_stepping = T
+     outstyle-uses-maxlevel = T
 
 # Equation and boundary conditions
      meqn = 1             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 # Diagnostics and debugging
-     verbosity = essential        # verbose
-     check_conservation = T
-     run_diagnostics = F
+     verbosity = production        # verbose
+     conservation-check = T
+     run-user-diagnostics = F
      trapfpe = T          # trap floating point exceptions
      mpi_debug = F
 
-     tikzout = T
+     tikzout = F
      tikz_figsize = 4 4
      vtkout = 0               # Read into VisIt
 
