(torus, ini file)

--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -10,20 +10,20 @@
 
 # Regridding options
      minlevel = 3         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     maxlevel = 6         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.001
      smooth-refine = T
-     smooth-level = 5
+     smooth-level = 0
      coarsen-delay = 0
 
 # Time stepping
      tfinal = 4.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 0.4e-1    # Initial time step for 'minlevel'
+     initial_dt = 0.01    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
@@ -31,7 +31,7 @@
      nout = 10            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle =  F        # subcycle in time ( = T or F).
+     subcycle =  T        # subcycle in time ( = T or F).
      global_time_stepping = T
      outstyle-uses-maxlevel = T
 
