(torus, ini file)

--- a/applications/advection/2d/torus/example_carsten.ini
+++ b/applications/advection/2d/torus/example_carsten.ini
@@ -49,7 +49,7 @@
 
 # File and console IO
      verbosity = production    # verbosity
-     serialout = T            # Works with Matlab
+     serialout = F            # Works with Matlab
      tikzout = F
      tikz_figsize = 4 4
      vtkout = 2               # Read into VisIt
