--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -16,8 +16,8 @@
      smooth-level = 5
      coarsen-delay = 0
 
-     refine_threshold = 0.05
-     coarsen_threshold = 1e-3
+     refine_threshold = 0.3
+     coarsen_threshold = 0.001
 
 # Time stepping
      tfinal = 4.0         #
@@ -28,12 +28,12 @@
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3          # Controls how often output files are produced
-     nout =  40
-     nstep = 1                  # Only used if outstyle is 3
+     nout =  250
+     nstep = 50                  # Only used if outstyle is 3
 
      subcycle = F                # subcycle in time ( = T or F).
-     global-time-stepping = T
-     outstyle-uses-maxlevel = T  # Only applies to outstyle 3
+     global-time-stepping = F
+     outstyle-uses-maxlevel = F  # Only applies to outstyle 3
 
 
 # Equation info
@@ -49,10 +49,10 @@
 
 # File and console IO
      verbosity = production    # verbosity
-     serialout = F            # Works with Matlab
+     serialout = T            # Works with Matlab
      tikzout = F
      tikz_figsize = 4 4
-     vtkout = 2               # Read into VisIt
+     vtkout = F               # Read into VisIt
 
 # mapping functions
      manifold = F         # Manifold
