Rename time stepping option

--- a/applications/advection/2d/filament/example_carsten.ini
+++ b/applications/advection/2d/filament/example_carsten.ini
@@ -32,7 +32,7 @@
      nstep = 5           # Only used if outstyle is 3
 
      subcycle = F       # subcycle in time ( = T or F).
-     global_time_stepping = T
+     advance-one-step = T
      outstyle-uses-maxlevel = T
 
 
