--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -32,8 +32,8 @@
      nstep = 50                  # Only used if outstyle is 3
 
      subcycle = F                # subcycle in time ( = T or F).
-     global-time-stepping = F
-     outstyle-uses-maxlevel = F  # Only applies to outstyle 3
+     advance-one-step = T
+     outstyle-uses-maxlevel = T  # Only applies to outstyle 3
 
 
 # Equation info
@@ -48,7 +48,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = production    # verbosity
+     verbosity = essential    # verbosity
      serialout = T            # Works with Matlab
      tikzout = F
      tikz_figsize = 4 4
