--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -32,7 +32,7 @@
      nstep = 1            # Only used if outstyle is 3
 
      subcycle =  T        # subcycle in time ( = T or F).
-     global_time_stepping = T
+     advance-one-step = T
      outstyle-uses-maxlevel = T
 
 # Equation and boundary conditions
