Add timers around neighbor search routines

--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -31,8 +31,8 @@
      nout =  250
      nstep = 50                  # Only used if outstyle is 3
 
-     subcycle = T                # subcycle in time ( = T or F).
-     advance-one-step = F
+     subcycle = F                # subcycle in time ( = T or F).
+     advance-one-step = T
      outstyle-uses-maxlevel = F  # Only applies to outstyle 3
 
 
