--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -10,10 +10,10 @@
 
 # Regridding options
      minlevel = 1         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
-     smooth-level = 4
+     smooth-level = 5
      coarsen-delay = 0
 
      refine_threshold = 0.3
@@ -31,7 +31,7 @@
      nout =  250
      nstep = 50                  # Only used if outstyle is 3
 
-     subcycle = F                # subcycle in time ( = T or F).
+     subcycle = T                # subcycle in time ( = T or F).
      advance-one-step = T
      outstyle-uses-maxlevel = F  # Only applies to outstyle 3
 
