--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -10,9 +10,9 @@
 
 # Regridding options
      minlevel = 3         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     maxlevel = 8         # Maximum levels of refinement
 
-     regrid_interval = 0        # Regrid every 'regrid_interval' time steps.
+     regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.001
      smooth-refine = T
@@ -23,17 +23,17 @@
      tfinal = 4.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 0.01    # Initial time step for 'minlevel'
+     initial_dt = 0.04    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 10            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
+     nout = 100            # Used for all three out styles;  has different meaning, though.
+     nstep =  25           # Only used if outstyle is 3
 
      subcycle =  T        # subcycle in time ( = T or F).
-     advance-one-step = T
-     outstyle-uses-maxlevel = T
+     advance-one-step = F
+     outstyle-uses-maxlevel = F
 
 # Equation and boundary conditions
      meqn = 1             # meqn
