--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -10,7 +10,7 @@
 
 # Regridding options
      minlevel = 3         # Minimum level
-     maxlevel = 9         # Maximum levels of refinement
+     maxlevel = 5         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
@@ -31,7 +31,7 @@
      nout = 100            # Used for all three out styles;  has different meaning, though.
      nstep =  25           # Only used if outstyle is 3
 
-     subcycle =  T        # subcycle in time ( = T or F).
+     subcycle =  F        # subcycle in time ( = T or F).
      advance-one-step = F
      outstyle-uses-maxlevel = F
 
@@ -40,19 +40,17 @@
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 # Diagnostics and debugging
-     verbosity = production        # verbose
-     conservation-check = T
+     conservation-check = F
      run-user-diagnostics = F
-     trapfpe = T          # trap floating point exceptions
+     trapfpe = F          # trap floating point exceptions
      mpi_debug = F
 
+# File and console IO
+     verbosity = production  #      # verbose
      tikzout = F
      tikz_figsize = 4 4
      vtkout = 0               # Read into VisIt
-
-# File and console IO
-
-     serialout = T
+     serialout = F
 
 # Mapping options
      manifold = F         # Manifold
