--- a/applications/advection/2d/torus/example1_cart.ini
+++ b/applications/advection/2d/torus/example1_cart.ini
@@ -7,12 +7,13 @@
      my = 16		  #
      mbc = 2              # Number of ghost cells.
 
-     minlevel = 0        # Minimum level
-     maxlevel = 3        # Maximum levels of refinement
+     minlevel = 3        # Minimum level
+     maxlevel = 5        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
-     coarsen_threshold = 0.01
-     smooth-refine=T
+     coarsen_threshold = 0.001
+     smooth-refine = T
+     smooth-level = 2
      coarsen-delay=0
 
 # -----------------------------------------------------------
@@ -22,37 +23,39 @@
 
 # Time stepping
      tfinal = 4.0         #
-     initial_dt = 0.05    # Initial time step for 'minlevel'
+     initial_dt = 0.02    # Initial time step for 'minlevel'
 
-     use_fixed_dt = F     # Take a fixed time step
+     use_fixed_dt = T     # Take a fixed time step
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 16            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
+     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 100            # Used for all three out styles;  has different meaning, though.
+     nstep = 25            # Only used if outstyle is 3
 
-     subcycle =  T        # subcycle in time ( = T or F).
+     subcycle =  F        # subcycle in time ( = T or F).
+     advance-one-step = F
+     outstyle-uses-maxlevel = F
 
 # Equation and boundary conditions
      meqn = 1             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 # Diagnostics and debugging
-     check_conservation = T
+     check_conservation = F
      run_diagnostics = F
-     trapfpe = T          # trap floating point exceptions
+     trapfpe = F          # trap floating point exceptions
      mpi_debug = F
 
 # File and console IO
 
      verbosity = production        # verbose
-     serialout = T
+     serialout = F
 
 # Mapping options
      manifold = T
-     mi = 4       # Dimensions of the brick
-     mj = 4
+     mi = 1       # Dimensions of the brick
+     mj = 1
 
      periodic_x = T
      periodic_y = T
