--- a/applications/advection/2d/torus/example2_torus.ini
+++ b/applications/advection/2d/torus/example2_torus.ini
@@ -4,14 +4,42 @@
 
 [Options]
 
-     minlevel = 0        # Minimum level
+     mx = 16
+     my = 16
+     minlevel = 2        # Minimum level
      maxlevel = 2        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     smooth-refine = T
+     smooth-level = 4
+     coarsen-delay = 0
+
+     ghost_patch_pack_area = T
+
+refine_threshold = 0.25
+     coarsen_threshold = 0.01
+
+# Time stepping
+     tfinal = 8.0         #
+     initial_dt = 2.5e-3    # Initial time step for 'minlevel'
+
+     use_fixed_dt = T     # Take a fixed time step
+     max_cfl = 1.0        # maximum cfl
+     desired_cfl = 0.9    # desired cfl
+
+     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 200            # Used for all three out styles;  has different meaning, though.
+     nstep = 20          # Only used if outstyle is 3
+
+     subcycle =  F        # subcycle in time ( = T or F).
+     advance-one-step = F
+     outstyle-uses-maxlevel = F
+
+     verbosity = essential
 
 # Mapping
      manifold = T         # Manifold
-     mi = 20       # Dimensions of the brick
-     mj = 8        # mj approx alpha*mi  (8 = 0.4*20)
+     mi = 5       # Dimensions of the brick
+     mj = 2        # mj approx alpha*mi  (8 = 0.4*20)
 
 [clawpack46]
      mcapa = 1
