--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -15,8 +15,8 @@
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
-     minlevel = 2               # Minimum level
-     maxlevel = 5               # Maximum levels of refinement
+     minlevel = 0               # Minimum level
+     maxlevel = 3               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.01
@@ -33,21 +33,21 @@
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle =  T        # subcycle in time ( = T or F).
+     subcycle =  F        # subcycle in time ( = T or F).
 
 # Equation and boundary conditions
      meqn = 1             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 # Diagnostics and debugging
-     check_conservation = T
+     check_conservation = F
      run_diagnostics = F
-     trapfpe = T          # trap floating point exceptions
+     trapfpe = F          # trap floating point exceptions
      mpi_debug = F
 
 # File and console IO
 
-     verbosity = essential        # verbose
+     verbosity = production        # verbose
      serialout = T
 
 # Mapping options
