--- a/applications/advection/2d/torus/Makefile.am
+++ b/applications/advection/2d/torus/Makefile.am
@@ -21,6 +21,7 @@ applications_advection_2d_torus_torus_SOURCES = \
 	applications/advection/2d/torus/user_4.6/rpt2noncons.f \
 	applications/advection/2d/torus/user_4.6/qinit.f \
 	applications/advection/2d/torus/user_4.6/b4step2.f \
+	applications/advection/2d/torus/user_4.6/b4step2_manifold.f \
 	applications/advection/2d/torus/user_4.6/setaux.f \
 	applications/advection/2d/torus/user_4.6/setaux_manifold.f
 
