--- a/applications/advection/2d/torus/example2_torus.ini
+++ b/applications/advection/2d/torus/example2_torus.ini
@@ -4,33 +4,33 @@
 
 [Options]
 
-     mx = 16
-     my = 16
+     mx = 8
+     my = 8
      minlevel = 2        # Minimum level
-     maxlevel = 2        # Maximum levels of refinement
+     maxlevel = 4        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
-     smooth-level = 4
+     smooth-level = 3
      coarsen-delay = 0
 
      ghost_patch_pack_area = T
 
-refine_threshold = 0.25
+     refine_threshold = 0.25
      coarsen_threshold = 0.01
 
 # Time stepping
-     tfinal = 8.0         #
-     initial_dt = 2.5e-3    # Initial time step for 'minlevel'
+     tfinal = 0.5         #
+     initial_dt = 5e-3    # Initial time step for 'minlevel'
 
      use_fixed_dt = T     # Take a fixed time step
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 200            # Used for all three out styles;  has different meaning, though.
-     nstep = 20          # Only used if outstyle is 3
+     nout = 1600            # Used for all three out styles;  has different meaning, though.
+     nstep = 100          # Only used if outstyle is 3
 
-     subcycle =  F        # subcycle in time ( = T or F).
+     subcycle =  T        # subcycle in time ( = T or F).
      advance-one-step = F
      outstyle-uses-maxlevel = F
 
