Add functionality to duplicate problem to many processors

--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -1,5 +1,5 @@
 [user]
-     example = 0       # 0=no map; 1=brick; 2=torus; 3=latlong; 4=annulus
+     example = 5       # 0=no map; 1=brick; 2=torus; 3=latlong; 4=annulus
 
 [Options]
 
@@ -9,27 +9,27 @@
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
-     minlevel = 3         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 6         # Minimum level
+     maxlevel = 8         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.001
      smooth-refine = T
-     smooth-level = 0
+     smooth-level = 7
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 4.0         #
+     tfinal = 2.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 0.04    # Initial time step for 'minlevel'
+     initial_dt = 5e-3    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 100            # Used for all three out styles;  has different meaning, though.
-     nstep =  25           # Only used if outstyle is 3
+     nout = 40         # Used for all three out styles;  has different meaning, though.
+     nstep =  5           # Only used if outstyle is 3
 
      subcycle =  F        # subcycle in time ( = T or F).
      advance-one-step = F
@@ -46,14 +46,17 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = production  #      # verbose
+     verbosity = essential  #      # verbose
      tikzout = F
      tikz_figsize = 4 4
      vtkout = 0               # Read into VisIt
      serialout = F
 
 # Mapping options
-     manifold = F         # Manifold
+     manifold = T         # Manifold
+
+     mi = 1
+     mj = 1
 
      periodic_x = T
      periodic_y = T
@@ -70,7 +73,7 @@
 [clawpack46]
      claw_verbosity = 0
      order  = 2 2         # normal and transverse order
-     mcapa = 0            # mcapa
+     mcapa = 1            # mcapa
      maux = 3             # maux  (velocity stored in (2,3)
      src_term = 0         # src_term
 
