(matlab/ini) Updates

--- a/applications/advection/2d/torus/example2_torus.ini
+++ b/applications/advection/2d/torus/example2_torus.ini
@@ -4,13 +4,13 @@
 
 [Options]
 
-     mx = 8
-     my = 8
-     minlevel = 2        # Minimum level
-     maxlevel = 4        # Maximum levels of refinement
+     mx = 32
+     my = 32
+     minlevel = 3        # Minimum level
+     maxlevel = 6        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
-     smooth-level = 3
+     smooth-level = 5
      coarsen-delay = 0
 
      ghost_patch_pack_area = T
@@ -20,17 +20,17 @@
 
 # Time stepping
      tfinal = 0.5         #
-     initial_dt = 5e-3    # Initial time step for 'minlevel'
+     initial_dt = 1.25e-3    # Initial time step for 'minlevel'
 
      use_fixed_dt = T     # Take a fixed time step
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 1600            # Used for all three out styles;  has different meaning, though.
-     nstep = 100          # Only used if outstyle is 3
+     nout = 40            # Used for all three out styles;  has different meaning, though.
+     nstep = 10          # Only used if outstyle is 3
 
-     subcycle =  T        # subcycle in time ( = T or F).
+     subcycle =  F        # subcycle in time ( = T or F).
      advance-one-step = F
      outstyle-uses-maxlevel = F
 
