--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -3,36 +3,36 @@
 
 [Options]
 # Grid dimensions
-     mx = 8
-     my = 8		# grid dimensions
+     mx = 32
+     my = 32		# grid dimensions
      mbc = 2            # number of ghost cells
 
 
 # Regridding options
-     minlevel = 1         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 7         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
-     smooth-level = 5
+     smooth-level = 6
      coarsen-delay = 0
 
-     refine_threshold = 0.3
-     coarsen_threshold = 0.001
+     refine_threshold = 0.25
+     coarsen_threshold = 0.01
 
 # Time stepping
      tfinal = 4.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 1.6e-2   # Initial time step for 'minlevel'
+     initial_dt = 2.5e-3   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3          # Controls how often output files are produced
-     nout =  250
+     nout =  400
      nstep = 50                  # Only used if outstyle is 3
 
-     subcycle = T                # subcycle in time ( = T or F).
-     advance-one-step = T
+     subcycle = F               # subcycle in time ( = T or F).
+     advance-one-step = F
      outstyle-uses-maxlevel = F  # Only applies to outstyle 3
 
 
@@ -44,12 +44,12 @@
 # Diagnostics and debugging
      check_conservation = F
      run_diagnostics = F
-     trapfpe = T          # trap floating point exceptions
+     trapfpe = F          # trap floating point exceptions
      mpi_debug = F
 
 # File and console IO
      verbosity = essential    # verbosity
-     serialout = T            # Works with Matlab
+     serialout = F            # Works with Matlab
      tikzout = F
      tikz_figsize = 4 4
      vtkout = F               # Read into VisIt
