--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -1,11 +1,11 @@
 [user]
-     example = 5       # 0=no map; 1=brick; 2=torus; 3=latlong; 4=annulus
+     example = 5       # 0=no map; 1=brick; 2=torus; 3=latlong; 4=annulus; 5=replicate
 
 [Options]
 
 # Grid dimensions
-     mx = 32               # Interior dimensions of each grid
-     my = 32		  #
+     mx = 8               # Interior dimensions of each grid
+     my = 8		  #
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
@@ -14,7 +14,7 @@
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
-     coarsen_threshold = 0.001
+     coarsen_threshold = 0.01
      smooth-refine = T
      smooth-level = 7
      coarsen-delay = 0
@@ -23,7 +23,7 @@
      tfinal = 2.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 5e-3    # Initial time step for 'minlevel'
+     initial_dt = 2e-3    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
