(ini/py files) Added ini options to parallel_tools script

--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -4,36 +4,36 @@
 [Options]
 
 # Grid dimensions
-     mx = 8               # Interior dimensions of each grid
-     my = 8		  #
+     mx = 32               # Interior dimensions of each grid
+     my = 32		  #
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
      minlevel = 4         # Minimum level
-     maxlevel = 8         # Maximum levels of refinement
+     maxlevel = 7         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.01
      smooth-refine = T
-     smooth-level = 7
+     smooth-level = 6
      coarsen-delay = 0
 
 # Time stepping
      tfinal = 2.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 2e-2    # Initial time step for 'minlevel'
+     initial_dt = 5e-3    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 5         # Used for all three out styles;  has different meaning, though.
+     nout = 20         # Used for all three out styles;  has different meaning, though.
      nstep =  1           # Only used if outstyle is 3
 
      subcycle =  F        # subcycle in time ( = T or F).
-     advance-one-step = F
-     outstyle-uses-maxlevel = F
+     advance-one-step = T
+     outstyle-uses-maxlevel = T    # nout steps on finest level (not coarsest)
 
 # Equation and boundary conditions
      meqn = 1             # meqn
@@ -50,7 +50,7 @@
      tikzout = F
      tikz_figsize = 4 4
      vtkout = 0               # Read into VisIt
-     serialout = F
+     serialout = T
 
 # Mapping options
      manifold = T         # Manifold
