--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -4,19 +4,19 @@
 [Options]
 
 # Grid dimensions
-     mx = 32               # Interior dimensions of each grid
-     my = 32		  #
+     mx = 8               # Interior dimensions of each grid
+     my = 8		  #
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
      minlevel = 4         # Minimum level
-     maxlevel = 7         # Maximum levels of refinement
+     maxlevel = 6         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
-     coarsen_threshold = 0.01
+     coarsen_threshold = 0.001
      smooth-refine = T
-     smooth-level = 6
+     smooth-level = 5
      coarsen-delay = 0
 
 # Time stepping
@@ -42,7 +42,7 @@
 # Diagnostics and debugging
      conservation-check = F
      run-user-diagnostics = F
-     trapfpe = F          # trap floating point exceptions
+     trapfpe = T          # trap floating point exceptions
      mpi_debug = F
 
 # File and console IO
@@ -55,8 +55,8 @@
 # Mapping options
      manifold = T         # Manifold
 
-     mi = 1
-     mj = 1
+     mi = 4
+     mj = 4
 
      periodic_x = T
      periodic_y = T
