--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -4,26 +4,26 @@
 [Options]
 
 # Grid dimensions
-     mx = 8               # Interior dimensions of each grid
-     my = 8		  #
+     mx = 32               # Interior dimensions of each grid
+     my = 32		  #
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
      minlevel = 4         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     maxlevel = 7         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.001
      smooth-refine = T
-     smooth-level = 5
+     smooth-level = 6
      coarsen-delay = 0
 
 # Time stepping
      tfinal = 2.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 5e-3    # Initial time step for 'minlevel'
+     initial_dt = 2.5e-3    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
@@ -50,21 +50,21 @@
      tikzout = F
      tikz_figsize = 4 4
      vtkout = 0               # Read into VisIt
-     serialout = T
+     serialout = F
 
 # Mapping options
-     manifold = T         # Manifold
+     manifold = F         # Manifold
 
-     mi = 4
-     mj = 4
+     mi = 2
+     mj = 2
 
      periodic_x = T
      periodic_y = T
 
      # These dimensions only get used if manifold = F
-     ax = -1
+     ax = 0
      bx = 1
-     ay = -1
+     ay = 0
      by = 1
 
 # -----------------------------------------------------------
@@ -73,7 +73,7 @@
 [clawpack46]
      claw_verbosity = 0
      order  = 2 2         # normal and transverse order
-     mcapa = 1            # mcapa
+     mcapa = 0            # mcapa
      maux = 3             # maux  (velocity stored in (2,3)
      src_term = 0         # src_term
 
