modify some fortran routine

--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -42,7 +42,7 @@
      trapfpe = T          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
      check_conservation = F
-     run_diagnostics = F
+     run_diagnostics = T
 
 # Equations and boundary conditions
      meqn = 1             # Number of equations
