--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -35,7 +35,7 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = production        # verbose
+     verbosity = info        # verbose
      serialout = T
 
 # Diagnostics and debugging
