--- a/src/solvers/fc2d_clawpack5/Makefile.am
+++ b/src/solvers/fc2d_clawpack5/Makefile.am
@@ -16,6 +16,7 @@ libclawpack5_compiled_sources = \
 	src/solvers/fc2d_clawpack5/fortran_source/clawpack5_bc2.f \
 	src/solvers/fc2d_clawpack5/fortran_source/clawpack5_flux2.f \
 	src/solvers/fc2d_clawpack5/fortran_source/clawpack5_step2.f90 \
+	src/solvers/fc2d_clawpack5/fortran_source/clawpack5_step2_wrap.f \
 	src/solvers/fc2d_clawpack5/fortran_source/philim.f \
 	src/solvers/fc2d_clawpack5/fortran_source/src2.f90 
 
