--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -27,7 +27,7 @@
 
      outstyle = 1         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
-			  # 3 : Take nout steps;  save files every nstep steps.
+			           # 3 : Take nout steps;  save files every nstep steps.
 
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
@@ -35,14 +35,14 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = info        # verbose
+     verbosity = production        # verbose
      serialout = T
 
 # Diagnostics and debugging
      trapfpe = T          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
      check_conservation = F
-     run_diagnostics = T
+     run_diagnostics = F
 
 # Equations and boundary conditions
      meqn = 1             # Number of equations
