(swirl_mapped) Update application to user clawpack 5.0

--- a/applications/advection/2d/swirl_mapped/example0.ini
+++ b/applications/advection/2d/swirl_mapped/example0.ini
@@ -9,8 +9,8 @@
      my = 16
 
 # Regridding information
-     minlevel = 1         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 3         # Maximum levels of refinement
 
 # Regridding information
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
@@ -26,8 +26,8 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 16            # Used for all three out styles;  has different meaning, though.
+     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 100            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
@@ -53,7 +53,7 @@
      ay = 0
      by = 1
 
-[clawpack46]
+[clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 3            # mcapa
      maux = 3             # maux
@@ -62,5 +62,11 @@
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
 
+[clawpack46]
+     order  = 2 2         # normal and transverse order
      mcapa = 3            # mcapa
      maux = 3             # maux
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
