(swirl_mapped) Five patch problem working

--- a/applications/advection/2d/swirl_mapped/example2_fivepatch.ini
+++ b/applications/advection/2d/swirl_mapped/example2_fivepatch.ini
@@ -1,6 +1,7 @@
 [user]
     example = 2
     alpha = 0.4
+    claw-version = 5
 
 [Options]
 # Nothing to overwrite - options are the same as fclaw_options.ini
@@ -8,13 +9,13 @@
   mx = 16
   my = 16
 
-  minlevel = 1
-  maxlevel = 4
+  minlevel = 3
+  maxlevel = 5
 
   manifold = T
   scale = 0.5 0.5 1
   shift = 0.5 0.5 0
 
-[clawpack46]
+[clawpack5]
    maux = 3
    mcapa = 3
