--- a/applications/advection/2d/swirl_mapped/example0.ini
+++ b/applications/advection/2d/swirl_mapped/example0.ini
@@ -1,6 +1,7 @@
 [User]
     example = 0          # Identity mapping
     tperiod = 8
+    claw-version = 5
 
 [Options]
 
@@ -30,12 +31,14 @@
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = T         # subcycle in time ( = T or F).
+     subcycle = F         # subcycle in time ( = T or F).
+     advance-one-step = F
+     outstyle-uses-maxlevel = F    # nout steps on finest level (not coarsest)
 
 # File and console IO
      verbosity = essential        # verbose
 
-     trapfpe = T          # Trap floating point exceptions
+     trapfpe = F          # Trap floating point exceptions
      mpi_debug = F
      check_conservation = F
 
