--- a/applications/advection/2d/swirl_mapped/example1_cart.ini
+++ b/applications/advection/2d/swirl_mapped/example1_cart.ini
@@ -1,9 +1,10 @@
 [user]
     example = 1
+    claw-version = 5
 
 [Options]
     minlevel = 0
-    maxlevel = 3
+    maxlevel = 2
 
 
 # Brick dimensions
@@ -15,6 +16,6 @@
     scale = 0.5 0.5 1
     shift = 0.5 0.5 0
 
-[clawpack46]
+[clawpack5]
     maux = 3
     mcapa = 3
