(torus/*.m/*.ini) Added misc changes to torus example

--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -10,13 +10,13 @@
 
 # Regridding options
      minlevel = 4         # Minimum level
-     maxlevel = 7         # Maximum levels of refinement
+     maxlevel = 8         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.001
      smooth-refine = T
-     smooth-level = 6
+     smooth-level = 7
      coarsen-delay = 0
 
 # Time stepping
@@ -31,9 +31,10 @@
      nout = 20         # Used for all three out styles;  has different meaning, though.
      nstep =  1           # Only used if outstyle is 3
 
-     subcycle =  F        # subcycle in time ( = T or F).
-     advance-one-step = T
-     outstyle-uses-maxlevel = T    # nout steps on finest level (not coarsest)
+     subcycle =  T        # subcycle in time ( = T or F).
+     advance-one-step = F
+     outstyle-uses-maxlevel = F    # nout steps on finest level (not coarsest)
+     weighted_partition = T
 
 # Equation and boundary conditions
      meqn = 1             # meqn
@@ -42,7 +43,7 @@
 # Diagnostics and debugging
      conservation-check = F
      run-user-diagnostics = F
-     trapfpe = T          # trap floating point exceptions
+     trapfpe = F          # trap floating point exceptions
      mpi_debug = F
 
 # File and console IO
