--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -3,17 +3,17 @@
 
 [Options]
 # Grid dimensions
-     mx = 16
-     my = 16		# grid dimensions
+     mx = 8
+     my = 8		# grid dimensions
      mbc = 2            # number of ghost cells
 
 
 # Regridding options
-     minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 7         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = T
-     smooth-level = 6
+     smooth-refine = F
+     smooth-level = 0
      coarsen-delay = 0
 
      refine_threshold = 0.25
@@ -22,16 +22,16 @@
 # Time stepping
      tfinal = 4.0         #
 
-     use_fixed_dt = T     # Take a fixed time step
+     use_fixed_dt = F     # Take a fixed time step
      initial_dt = 5e-3   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 3          # Controls how often output files are produced
-     nout =  400
-     nstep = 50                  # Only used if outstyle is 3
+     outstyle = 1          # Controls how often output files are produced
+     nout =  1
+     nstep = 1                 # Only used if outstyle is 3
 
-     subcycle = F               # subcycle in time ( = T or F).
+     subcycle = T               # subcycle in time ( = T or F).
      advance-one-step = F
      outstyle-uses-maxlevel = F  # Only applies to outstyle 3
 
