(geoclaw) add opendatafile.f to amrlib

--- a/src/solvers/fc2d_geoclaw/Makefile.am
+++ b/src/solvers/fc2d_geoclaw/Makefile.am
@@ -8,6 +8,7 @@ libgeoclaw_compiled_sources = \
 	src/solvers/fc2d_geoclaw/fc2d_geoclaw.cpp \
 	src/solvers/fc2d_geoclaw/fc2d_geoclaw_options.c \
 	src/solvers/fc2d_geoclaw/amrlib_source/amr_module.f90 \
+	src/solvers/fc2d_geoclaw/amrlib_source/opendatafile.f \
 	src/solvers/fc2d_geoclaw/geolib_source/geoclaw_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/qinit_module.f90 \
 	src/solvers/fc2d_geoclaw/fortran_source/geoclaw_set_modules.f90
