(geoclaw) add setaux and more module

--- a/src/solvers/fc2d_geoclaw/Makefile.am
+++ b/src/solvers/fc2d_geoclaw/Makefile.am
@@ -14,10 +14,18 @@ libgeoclaw_compiled_sources = \
 	src/solvers/fc2d_geoclaw/amrlib_source/regions_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/gauges_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/qinit_module.f90 \
+	src/solvers/fc2d_geoclaw/geolib_source/surge/holland_storm_module.f90 \
+	src/solvers/fc2d_geoclaw/geolib_source/surge/constant_storm_module.f90 \
+	src/solvers/fc2d_geoclaw/geolib_source/surge/stommel_storm_module.f90 \
+	src/solvers/fc2d_geoclaw/geolib_source/surge/storm_module.f90 \
+	src/solvers/fc2d_geoclaw/geolib_source/friction_module.f90 \
 	src/solvers/fc2d_geoclaw/fortran_source/geoclaw_set_modules.f90 \
 	src/solvers/fc2d_geoclaw/amrlib_source/opendatafile.f \
 	src/solvers/fc2d_geoclaw/geolib_source/topointegral.f \
-	src/solvers/fc2d_geoclaw/geolib_source/bilinearintegral.f
+	src/solvers/fc2d_geoclaw/geolib_source/bilinearintegral.f \
+	src/solvers/fc2d_geoclaw/geolib_source/setaux.f90 \
+	src/solvers/fc2d_geoclaw/geolib_source/cellgridintegrate2.f \
+	src/solvers/fc2d_geoclaw/fortran_source/geoclaw_block.f
 
 lib_LTLIBRARIES += src/solvers/fc2d_geoclaw/libgeoclaw.la
 
