(geoclaw) test qinit

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -45,7 +45,7 @@
      run_diagnostics = F
 
 # Equations and boundary conditions
-     meqn = 1             # Number of equations
+     meqn = 3             # Number of equations
      mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
 # Mapping
@@ -58,10 +58,10 @@
      by = 100
 
 
-[clawpack5]
+[geoclaw]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 2             # maux
+     maux = 1             # maux
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
