(geoclaw) Add src2, b4step2, bc2

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -4,32 +4,32 @@
 [Options]
 
 # Grid dimensions
-     mx = 8		      # mx_leaf
-     my = 8               # my_leaf
+     mx = 50		      # mx_leaf
+     my = 50              # my_leaf
      mbc = 2              # Number of ghost cells
 
 # Regridding information
-     minlevel = 2         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
-     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     minlevel = 0         # Minimum level
+     maxlevel = 0         # Maximum levels of refinement
+     regrid_interval = 0  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
      smooth-refine = T
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 4.0         #  Final time
+     tfinal = 8.0         #  Final time
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.005   # Initial time step for 'minlevel'
+     initial_dt = 0.016   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
-			           # 3 : Take nout steps;  save files every nstep steps.
+			  # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nout = 24            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
@@ -62,7 +62,7 @@
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 1             # maux
-     src_term = 0         # src_term
+     src_term = 1         # src_term
 
-     mwaves = 1           # mwaves
-     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mwaves = 3           # mwaves
+     mthlim = 4 4 4           # mthlim (is a vector in general, with 'mwaves' entries)
