(geoclaw) rename files to prevent collision with other files of same name; add more functionality

--- a/src/solvers/fc2d_geoclaw/Makefile.am
+++ b/src/solvers/fc2d_geoclaw/Makefile.am
@@ -8,12 +8,14 @@ libgeoclaw_compiled_sources = \
 	src/solvers/fc2d_geoclaw/fc2d_geoclaw.cpp \
 	src/solvers/fc2d_geoclaw/fc2d_geoclaw_options.c \
 	src/solvers/fc2d_geoclaw/amrlib_source/amr_module.f90 \
+	src/solvers/fc2d_geoclaw/amrlib_source/regions_module.f90 \
+	src/solvers/fc2d_geoclaw/amrlib_source/gauges_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/geoclaw_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/utility_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/topo_module.f90 \
-	src/solvers/fc2d_geoclaw/amrlib_source/regions_module.f90 \
-	src/solvers/fc2d_geoclaw/geolib_source/gauges_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/qinit_module.f90 \
+	src/solvers/fc2d_geoclaw/geolib_source/fixedgrids_module.f90 \
+	src/solvers/fc2d_geoclaw/geolib_source/refinement_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/surge/holland_storm_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/surge/constant_storm_module.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/surge/stommel_storm_module.f90 \
@@ -26,9 +28,12 @@ libgeoclaw_compiled_sources = \
 	src/solvers/fc2d_geoclaw/fortran_source/geoclaw_set_modules.f90 \
 	src/solvers/fc2d_geoclaw/fortran_source/geoclaw_step2_wrap.f90 \
 	src/solvers/fc2d_geoclaw/fortran_source/geoclaw_limiter.f \
+	src/solvers/fc2d_geoclaw/fortran_source/geoclaw_tag4refinement.f90 \
 	src/solvers/fc2d_geoclaw/fortran_source/philim.f \
+	src/solvers/fc2d_geoclaw/fortran_source/geoclaw_block.f \
 	src/solvers/fc2d_geoclaw/amrlib_source/opendatafile.f \
 	src/solvers/fc2d_geoclaw/amrlib_source/check4nans.f90 \
+	src/solvers/fc2d_geoclaw/amrlib_source/quick_sort1.f \
 	src/solvers/fc2d_geoclaw/geolib_source/topointegral.f \
 	src/solvers/fc2d_geoclaw/geolib_source/bilinearintegral.f \
 	src/solvers/fc2d_geoclaw/geolib_source/geoclaw_bc2.f \
@@ -38,7 +43,7 @@ libgeoclaw_compiled_sources = \
 	src/solvers/fc2d_geoclaw/geolib_source/geoclaw_b4step2.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/geoclaw_qinit.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/cellgridintegrate2.f \
-	src/solvers/fc2d_geoclaw/fortran_source/geoclaw_block.f
+	src/solvers/fc2d_geoclaw/geolib_source/allowflag.f90
 
 lib_LTLIBRARIES += src/solvers/fc2d_geoclaw/libgeoclaw.la
 
