(geoclaw/bowl) Work on setting up regions

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -4,17 +4,17 @@
 [Options]
 
 # Grid dimensions
-     mx = 8		      # mx_leaf
-     my = 8              # my_leaf
+     mx = 16		      # mx_leaf
+     my = 16              # my_leaf
      mbc = 2              # Number of ghost cells
 
 # Regridding information
-     minlevel = 4         # Minimum level
-     maxlevel = 7         # Maximum levels of refinement
-     regrid_interval = 0  # Regrid every 'regrid_interval' time steps.
+     minlevel = 2         # Minimum level
+     maxlevel = 6         # Maximum levels of refinement
+     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
-     smooth-refine = T
+     smooth-refine = F
      coarsen-delay = 0
 
 # Time stepping
