(matlab) Minor changes to create tikz plots for paper

--- a/applications/advection/2d/torus/example_sisc.ini
+++ b/applications/advection/2d/torus/example_sisc.ini
@@ -4,19 +4,19 @@
 [Options]
 
 # Grid dimensions
-     mx = 32               # Interior dimensions of each grid
-     my = 32		  #
+     mx = 16               # Interior dimensions of each grid
+     my = 16		  #
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
      minlevel = 4         # Minimum level
-     maxlevel = 8         # Maximum levels of refinement
+     maxlevel = 7         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.001
      smooth-refine = T
-     smooth-level = 7
+     smooth-level = 6
      coarsen-delay = 0
 
 # Time stepping
@@ -48,10 +48,10 @@
 
 # File and console IO
      verbosity = essential  #      # verbose
-     tikzout = F
+     tikzout = T
      tikz_figsize = 4 4
      vtkout = 0               # Read into VisIt
-     serialout = F
+     serialout = T
 
 # Mapping options
      manifold = F         # Manifold
