compile 'metric' application to get started on diagnostics

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -16,7 +16,7 @@ include applications/dummy/Makefile.am
 ### include applications/test_parms/Makefile.am
 
 # Test metric terms (curvature, for example)
-# include applications/metric/2d/all_mappings/Makefile.am
+include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection on manifolds
 include applications/advection/2d/swirl_mapped/Makefile.am
